# NQR

./: .gitignore  CLAUDE.md  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  pyproject.toml  status.txt
assets/: package.xml
assets/hpn_models/: package.xml
assets/hpn_models/grape/: big_grape.sdf  domain.pddl  grape.sdf  grape_1.pddl  grape_2.pddl  green_grape.sdf  large_cap.sdf  red_grape.sdf  small_cap.sdf  table.sdf
assets/hpn_models/misc/: banana.sdf  movo.urdf  sugar_box.sdf  table.sdf
assets/hpn_models/ycb/: license.txt  package.xml
assets/hpn_models/ycb/010_potted_meat_can/: log.txt
assets/hpn_models/ycb/011_banana/: textured.urdf
assets/hpn_models/ycb/012_strawberry/: textured.urdf
assets/open-world-tamp/: package.xml
assets/open-world-tamp/models/: aidan_world.sdf  floor.urdf  table.sdf  table.urdf
assets/open-world-tamp/movo_problems/empty_room/: domain.pddl  problem.pddl
assets/open-world-tamp/movo_problems/problem0/: domain.pddl  problem.pddl
assets/open-world-tamp/movo_problems/problem0_wall/: belief.pddl  domain.pddl  domain_orig_objects.pddl  holding_something_problem.pddl  holding_spam_problem.pddl  holding_sugar_box_problem.pddl  problem.pddl  problem_no_spam.pddl  something_on_something_problem.pddl  spam-spam-problem.pddl  spam_on_pillar.pddl  spam_on_spam_on_spam.pddl  sugar_on_pillar.pddl  three_spam_on_mat.pddl
assets/open-world-tamp/movo_problems/problem3/: domain.pddl  problem.pddl
assets/open-world-tamp/spot_problems/hpn_sim/: belief.pddl  domain.pddl  problem.pddl  problem_stack.pddl
assets/rby1/: cameras.scenario.yaml  model_drivers.scenario.yaml
assets/rby1_description_drake/: add_rby1_grippers_planning.dmd.yaml  add_rby1_grippers_sim.dmd.yaml  add_rby1_planning.dmd.yaml  add_rby1_sim.dmd.yaml  add_rby1_sim_with_holonomic_base_actuators.dmd.yaml  add_rby1_torso_arms_head.dmd.yaml  base.urdf  base_holonomic_with_actuators.urdf  base_unactuated.urdf  gripper_planning.urdf  gripper_sim.urdf  head_with_mit_camera_mount.urdf  left_arm.urdf  right_arm.urdf  torso.urdf
assets/rby1_description_drake/meshes/: BASE.mtl  EE_BODY.mtl  EE_FINGER.mtl  FT_SENSOR_L.mtl  FT_SENSOR_R.mtl  LINK_0.mtl  LINK_1.mtl  LINK_10.mtl  LINK_11.mtl  LINK_12.mtl  LINK_13.mtl  LINK_14.mtl  LINK_15.mtl  LINK_16.mtl  LINK_17.mtl  LINK_18.mtl  LINK_19.mtl  LINK_2.mtl  LINK_20.mtl  LINK_3.mtl  LINK_4.mtl  LINK_5.mtl  LINK_6.mtl  LINK_7.mtl  LINK_8.mtl  LINK_9.mtl  PAN_TILT_1.mtl  PAN_TILT_2.mtl  PAN_TILT_3.mtl  WHEEL.mtl  rby1_camera_mount_realsense.mtl
assets/rby1a/mujoco/: model_act.xml  rby1.xml  rby1_v1.1.xml
assets/spot/: add_spot_with_arm_and_floating_base_actuators.dmd.yaml  cameras.scenario.yaml  model_drivers.scenario.yaml  spot_with_arm_and_floating_base_actuators.urdf
assets/test_scene/: block.urdf  block.xml  blue_block.xml  table.urdf  table.xml
scripts/: run_combined.py
src/qr_api/: belief_interfaces.py  belief_typing.py  control_interfaces.py  control_typing.py  localization_interfaces.py  obm_interfaces.py  obm_typing.py  perc_interfaces.py  perc_typing.py  planning_interfaces.py  policy_interfaces.py  policy_typing.py  sensor_interfaces.py  sensor_typing.py  virtual_moman_interfaces.py  virtual_robot_interfaces.py
src/qr_belief/: builder.py  dummy_belief_interfaces.py
src/qr_belief/goal/: simple_goal_belief_module.py
src/qr_belief/obm/: ml_object_set.py  obm_components.py  obm_module.py
src/qr_belief/robot/: simple_robot_belief_module.py
src/qr_belief/spatial/: simple_spatial_module.py
src/qr_core/: event.py  event_manager.py  module.py  query.py  symbol_gen.py  typing.py
src/qr_domains/fully_observed_tamp/: README.md  configuration.py
src/qr_domains/fully_observed_tamp/tests/box_kitchen/: domain.pddl  problem.pddl  problem_big.pddl  problem_high_shelf.pddl  problem_low_shelf.pddl
src/qr_domains/fully_observed_tamp/tests/colored_objects/: brown_anom_prob.pddl  domain.pddl  empty_belief.pddl  init_grasp_prob.pddl  init_grasp_prob_2.pddl  init_grasp_prob_near.pddl  problem.pddl  problem_free_base.pddl  (+16 more)
src/qr_kinsim/: demo.py  render.py  robots.py  sim.py  virtual_robot.py  world.py
src/qr_main/: dummy_io_interfaces.py  main.py  main_virtual_robot.py
src/qr_mapping/: CMakeLists.txt  README.md  cpp.pyi  package.xml  smoke_test.py
src/qr_mapping/dependencies/: VENDORED.md
src/qr_mapping/dependencies/common_robotics_utilities/: CMakeLists.txt
src/qr_mapping/dependencies/voxelized_geometry_tools/: CMakeLists.txt
src/qr_mapping/include/qr_mapping/: color_depth_images_to_pointcloud_generator.h  color_depth_images_to_ros_pointcloud_system.h  depth_image_to_ros_pointcloud_system.h  drake_pointcloud_voxelization_interface.hpp  ros_voxel_grid.hpp  voxel_grid.hpp
src/qr_mapping/src/qr_mapping/: bindings.cpp  color_depth_images_to_pointcloud_generator.cc  drake_pointcloud_voxelization_interface.cpp  voxel_grid.cpp
src/qr_perception/: object_based_perception.py  pipelines.py
src/qr_perception/modules/: featurizers.py  preprocessors.py  segmentation_sim.py  simple_completion.py  table_finder.py  vlm_designation.py
src/qr_policy/: dummy_policy_module.py  hpn_belief_view.py  hpn_policy_module.py
src/qr_problem_defs/: misc_problems.py  problem_def.py
src/qr_robots/common/: launch.py  rby1.py  spot.py  zmq_robot_modules.py  zmq_sim.py  zmq_virtual_moman.py
src/qr_robots/drake/: desired_state_source.py  sim_base.py
src/qr_robots/drake/rby1/: sim.py  virtual_robot.py
src/qr_robots/drake/spot/: sim.py  virtual_robot.py
src/qr_robots/mujoco/: sim_base.py
src/qr_robots/mujoco/rby1/: sim.py  virtual_robot.py
src/qr_robots/mujoco/spot/: sim.py  virtual_robot.py
src/qr_run/: qr_config.py  run.py  standard_configs.py  virtual_robots.py
src/qr_utils/: __init__.py  clustering.py  cog_utils.py  colors.py  misc_utils.py  pcd_utilities.py  raster_scan.py  sensor.py  timer.py  traceFile.py
tests/: conftest.py  lpk_work.py  test_belief.py  test_combined_system.py  test_drake_rby1.py  test_drake_spot.py  test_kinsim.py  test_mujoco_rby1.py  test_mujoco_spot.py  test_perception_obm.py  test_zmq_virtual_robot.py
(+60 files in other folders)
