[project]
name = "nqr"
version = "0.1.0"
description = "New implementation of the QR robot planning/simulation/control stack."
authors = [{ name = "MIT Quest Robotics" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "trimesh>=3.20.2",
    "shapely>=2.0.4",
    "matplotlib>=3.7",
    "pyzmq",
    "mujoco>=3.3.0",
    # Pinned: qr_mapping's C++ is built against the matching Drake SDK and
    # shares Drake objects with pydrake across the pybind boundary.
    "drake==1.45.0",
    "manipulation>=2024.12.30.post1",
    "meshcat",
    "colormath",
    "pycolornames",
    "termcolor",
    "pyyaml>=6.0",
    # perception / OBM
    "opencv-python>=4.9",
    "open3d>=0.18",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "ncollpyde",   # fast ray-mesh intersection (visibility tracing in the OBM)
    "scikit-image",   # Roboverse raster costmap (undeclared HPN dep)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ipdb"]

[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.12"
# Persist the CMake build tree so the fetched Drake SDK and object files
# survive re-installs.
build-dir = "build/{wheel_tag}"
wheel.packages = [
    "src/qr_api",
    "src/qr_core",
    "src/qr_utils",
    "src/qr_robots",
    "src/qr_kinsim",
    "src/qr_perception",
    "src/qr_belief",
    "src/qr_mapping",
    "src/qr_policy",
    "src/qr_main",
    "src/qr_run",
    "src/qr_problem_defs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

###############################################################################
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
nqr = { path = ".", editable = true, extras = ["dev"] }
# HPN stays an external dependency (sibling checkouts) for now: NQR provides
# plug-compatible interfaces; HPN provides the planner/domains/Roboverse.
hpn = { path = "../HPN", editable = true }
qaa = { path = "../QAA", editable = true }

[tool.pixi.system-requirements]
macos = "14.0"
libc = { family = "glibc", version = "2.35" }

[tool.pixi.dependencies]
python = "3.12.*"
# Pinocchio from conda-forge bundles the Coal collision library and its
# Python bindings with assimp mesh loading, which the pip wheels lack.
pinocchio = ">=3.4"
pip = "*"
# For HPN's pycddlib<3 (sdist build) and pybullet.
gmp = ">=6.3.0,<7"
cddlib = "*"
pybullet = ">=3.2.5"
# C++ toolchain for qr_mapping (scikit-build-core drives CMake at install).
cmake = ">=3.28,<4"
ninja = ">=1.11"
# Must match the pybind11 internals ABI of pydrake 1.45 (built with 2.13.x);
# pybind11 3.x cannot share Drake types like Rgba/Meshcat across modules.
pybind11 = ">=2.13.6,<2.14"
eigen = ">=3.4.0,<4"
cxx-compiler = ">=1.7"
llvm-openmp = "*"
scikit-build-core = ">=0.12"

# The development shell profile points PYTHONPATH at the old QR/HPN repos,
# which would shadow this repo's packages inside the pixi env.
[tool.pixi.activation.env]
PYTHONPATH = ""

[tool.pixi.tasks]
test = "pytest tests -x -q"
# Kinematic simulator demo (Meshcat at http://localhost:7000)
kinsim-demo = "python -m qr_kinsim.demo"
