<?xml version="1.0"?>
<package format="2">
    <name>qr_assets</name>
    <version>1.0.0</version>
    <description>Assets for the QR project</description>
    <maintainer email="russt@mit.edu">Russ Tedrake</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
  </export>
</package>
