<?xml version="1.0"?>
<package format="3">
  <name>qr_mapping</name>
  <version>0.1.0</version>
  <description>Mapping tools for MIT Quest Robotics</description>
  <maintainer email="sancha@mit.edu">Siddharth Ancha</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <depend>common_robotics_utilities</depend>
  <depend>voxelized_geometry_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
